--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@tailwindcss/postcss": "^4.1.10",
+    "@tanstack/vue-query": "^5.80.7",
+    "axios": "^1.10.0",
+    "lucide-vue-next": "^0.516.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.8.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
